--- a/client/assets/scss/_settings.scss
+++ b/client/assets/scss/_settings.scss
@@ -93,6 +93,7 @@
 // $body-background: #fff;
 // $body-font-color: #222;
 // $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-family: "Frutiger", Arial, Helvetica, sans-serif;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
 // $body-antialiased: true;
