More work on header styling

--- a/client/assets/scss/_settings.scss
+++ b/client/assets/scss/_settings.scss
@@ -91,15 +91,18 @@
 
 // We use these to control various global styles
 // $body-background: #fff;
+$body-background: #efefef;
 // $body-font-color: #222;
+$body-font-color: #222;
 // $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-$body-font-family: "Frutiger", Arial, Helvetica, sans-serif;
+$body-font-family: Frutiger,Arial,Helvetica,sans-serif;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
 // $body-antialiased: true;
 
 // Application Colors
 // $primary-color: #00558b;
+$primary-color: #e60000;
 // $secondary-color: #f1f1f1;
 // $alert-color: #F04124;
 // $info-color: #A0D3E8;
@@ -129,9 +132,16 @@ $body-font-family: "Frutiger", Arial, Helvetica, sans-serif;
 //   xlarge: rem-calc(1440),
 //   xxlarge: rem-calc(1920),
 // );
+$breakpoints: (
+  small: rem-calc(0),
+  medium: rem-calc(640),
+  large: rem-calc(1200),
+  xlarge: rem-calc(1440),
+);
 
 // All of the names in this list will be output as classes in your CSS, like small-12, medium-6, and so on.
 // $breakpoint-classes: (small medium large); 
+$breakpoint-classes: (small medium large xlarge); 
 
 // 4. Typography
 // - - - - - - - - - - - - - - -
@@ -428,13 +438,16 @@ $body-font-family: "Frutiger", Arial, Helvetica, sans-serif;
 
 // $menubar-fontsize: 1rem;
 // $menubar-background: #fff;
+$menubar-background: #fff;
 // $menubar-background-hover: smartscale($menubar-background, 7%);
+$menubar-background-hover: $menubar-background;
 // $menubar-background-active: $menubar-background-hover;
 // $menubar-color: isitlight($menubar-background);
 // $menubar-color-hover: $menubar-color;
 // $menubar-color-active: $menubar-color-hover;
 
 // $menubar-item-padding: $global-padding;
+$menubar-item-padding: rem-calc(10);
 // $menubar-icon-size: 25px;
 // $menubar-icon-spacing: $menubar-item-padding; 
 
