--- a/client/assets/scss/_header.scss
+++ b/client/assets/scss/_header.scss
@@ -1,21 +1,78 @@
+.canvas {
+	padding: 0 rem-calc(7);
+	background-color: white;
+}
+
+@include breakpoint(medium) {
+	.canvas {
+		padding: 0 rem-calc(28);
+	}
+}
+
+@include breakpoint(large) {
+	.canvas {
+		padding: 0 rem-calc(32);
+	}
+}
+
+@include breakpoint(xlarge) {
+	.canvas {
+		padding: 0 rem-calc(62);
+		width: rem-calc(1440);
+		margin: 0 auto;
+	}
+}
+
 .title {
 	margin: 1.25rem;
 
 	.title-logo {
 		width: rem-calc(108 * 1.375/1.6875);
 		height: rem-calc(42 * 1.375/1.6875);
-		margin-right: 0.625rem;
 	}
 
 	@include breakpoint(medium) {
 		.title-logo {
 			width: rem-calc(108);
 			height: rem-calc(42);
-			margin-right: 1.25rem;
+		}
+
+		.title-text {
+			margin-left: 1.25rem;
 		}
 	}
 
 	.version-info {
 		font-size: rem-calc(12);
+	}
+}
+
+.menu-group {
+	border-bottom-color: #bebebe;
+	border-bottom-style: solid;
+	border-bottom-width: rem-calc(1);
+}
+
+.menu-group-left {
+	li {
+		margin-right: rem-calc(17.5);
+	}	
+}
+
+.menu-group-right {
+	li {
+		margin-left: rem-calc(17.5);
+	}	
+}
+
+.menu-bar  {
+	& a {
+		border-bottom-style: solid;
+		border-bottom-width: rem-calc(5);
+		border-bottom-color: white;
+	}
+
+	& a:hover {
+		border-bottom-color: $primary-color;
 	}
 }
