--- a/client/assets/scss/_settings.scss
+++ b/client/assets/scss/_settings.scss
@@ -110,8 +110,11 @@ $primary-color: #e60000;
 // $warning-color: #F08A24;
 // $dark-color: #232323;
 // $gray: #dfdfdf;
+$gray: #646464;
 // $gray-dark: darken($gray, 8);
+$gray-dark: #585148;
 // $gray-light: lighten($gray, 8);
+$gray-light: #bebebe;
 
 // We use these to make sure border radius matches unless we want it different.
 // $global-radius: 4px;
