--- a/client/assets/scss/_header.scss
+++ b/client/assets/scss/_header.scss
@@ -29,17 +29,26 @@ $canvas-color: #fff;
 	position: absolute;
 	display: inline-block;
 	top: 0;
-	right: rem-calc(64);
+	right: rem-calc(62);
+	z-index: 1;
 
 	.location {
 		padding: rem-calc(10);
 		list-style: none;
-
+		margin: 0;
+	
 		&:hover {
-			background-color: #646464;
-			color: #fff;
+			background-color: $gray-dark;
 		}
-	};
+
+		a {
+			color: $body-font-color;
+
+			&:hover {
+				color: $canvas-color;
+			}
+		}
+	}
 }
 
 .title {
@@ -125,6 +134,6 @@ $canvas-color: #fff;
 	}
 
 	.is-active > a {
-		border-bottom-color: #646464;
+		border-bottom-color: $gray;
 	}
 }
