--- a/client/assets/scss/_header.scss
+++ b/client/assets/scss/_header.scss
@@ -1,42 +1,67 @@
 $canvas-color: #fff;
+$canvas-small-padding: rem-calc(7);
+$canvas-medium-padding: rem-calc(28);
+$canvas-large-padding: rem-calc(32);
+$canvas-xlarge-padding: rem-calc(62);
 
 .canvas {
-	padding: 0 rem-calc(7);
+	padding: 0 $canvas-small-padding;
 	background-color: $canvas-color;
 }
 
 @include breakpoint(medium) {
 	.canvas {
-		padding: 0 rem-calc(28);
+		padding: 0 $canvas-medium-padding;
 	}
 }
 
 @include breakpoint(large) {
 	.canvas {
-		padding: 0 rem-calc(32);
+		padding: 0 $canvas-large-padding;
 	}
 }
 
 @include breakpoint(xlarge) {
 	.canvas {
-		padding: 0 rem-calc(62);
+		padding: 0 $canvas-xlarge-padding;
 		width: rem-calc(1440);
 		margin: 0 auto;
 	}
 }
 
-.location-container {
+.topbar-container {
 	position: absolute;
-	display: inline-block;
 	top: 0;
-	right: rem-calc(62);
-	z-index: 1;
+	right: $canvas-small-padding;
+	@include clearfix;
 
-	.location {
+	@include breakpoint(medium) {
+		right: $canvas-medium-padding;
+	}
+
+	@include breakpoint(large) {
+		right: $canvas-large-padding;
+	}
+
+	@include breakpoint(xlarge) {
+		right: $canvas-xlarge-padding;
+	}
+
+	& .topbar-item {
+		float: left;
+		margin: 0 rem-calc(5);
 		padding: rem-calc(10);
 		list-style: none;
-		margin: 0;
-	
+		font-size: rem-calc(14);
+
+		&:first-child {
+			margin-left: 0;
+		}
+
+		&:last-child {
+			margin-right: 0;
+		}
+
 		&:hover {
 			background-color: $gray-dark;
 		}
